--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = cat_plushies
-description = Cat Plushies
+description = Plushies
 depends = 
 author = Soldier01(Atlante)
-title = Cat Plushies
+title = Plushies
